completed HTML CSS work' git status

--- a/index.html
+++ b/index.html
@@ -7,13 +7,39 @@
     </head>
     <body>
         <header>
-
+            <div id='nav-box'>
+              <div id='nav-img'>
+                <img  src="https://via.placeholder.com/200x70/000000/808080">
+              </div>
+              <ul>
+                <li><a>Nav Item 1</a></li>
+                <li><a>Nav Item 2</a></li>
+                <li><a>Nav Item 3</a></li>
+                <li><a>Nav Item 4</a></li>
+              </ul>
+            </div>
         </header>
         <main>
-
+          <div id='hero-photo'>
+            <img  src="https://via.placeholder.com/960x450/000000/808080">
+          </div>
+          <div id='sub-banner'>
+            <img id='img1' src="https://via.placeholder.com/300x375/000000/808080">
+            <img id='img2' src="https://via.placeholder.com/300x375/000000/808080">
+            <img id='img3' src="https://via.placeholder.com/300x375/000000/808080">
+          </div>
+          <div id='feature-banner'>
+            <img id='fbimg1' src="https://via.placeholder.com/480x400/000000/808080">
+            <h2>Featured Section Heading</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <button type="button">Call to Action</button>
+          </div>
         </main>
         <footer>
-
+          <div id='footer-section'>
+            <p>Test</p>
+          </div>
         </footer>
     </body>
 </html>
+
